fix: make sure the background image covers the whole page in Chrome  with adblock resolves #8

--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    min-height: 100vh;
     font-family: "Courier New" !important;
 }
 
